[package]
name = "lvm-sys2"
version = "1.1.1"
authors = ["Chris Holcombe <xfactor973@gmail.com>", "Skorobogaty Dmitry <skorobogatydmitry@gmail.com>"]
homepage = "https://github.com/skorobogatydmitry/lvm-sys2"
build = "build.rs"
description = "LVM FFI bindings"
license = "MIT"

[build-dependencies]
bindgen = "~0.40"

[dependencies]
