[package]
name = "lvm-sys2"
version = "2.0.0"
authors = ["Chris Holcombe <xfactor973@gmail.com>", "Skorobogaty Dmitry <skorobogatydmitry@gmail.com>"]
homepage = "https://github.com/skorobogatydmitry/lvm-sys2"
build = "build.rs"
description = "LVM FFI bindings"
license = "MIT"

[build-dependencies]
bindgen = "~0.40"

[dependencies]
serde = "1.0.218"
serde_json = "1.0.140"

[dev-dependencies]
rstest = "0.25.0"
